# datasus

./: .dlp-ignore.json  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml
dashboards/: main.py
dashboards/pages/: 10_🏨_Leitos_per_1000.py  11_🔍_Rastreabilidade.py  12_🔇_Silencio_Epidemiologico.py  13_🚨_Motor_Decisao.py  1_📊_Continuum_CID.py  2_🩺_Painel_Hospital.py  3_🛏️_Leitos_Município.py  4_🗺️_Mapa_Mortalidade.py  5_🏙️_POA_Bairros.py  8_🏢_Distribuicao_Estab.py  9_📉_Mortalidade_Municipio.py
dashboards/utils/: __init__.py  queries.py
data/ibge/: 43_idhm_municipio.csv  poa_cep_bairro.csv  poa_populacao_bairro.csv  rs_populacao_municipio.csv
docs/: apresentacao_tcc.html  architecture.md  base_de_dados.html  cnes_dicionario.md  data_dictionary.md  dataset_ml_v1.md  dicionario_dados.html  dicionarios_index.md  joins_guia.md  pbd_poa_sus.tex  plano_implementacao.html  questoes_analisadas.html  schema_tabelas.html  sia_dicionario.md  sih_dicionario.md  sim_dicionario.md  sinan_dicionario.md  sinasc_dicionario.md  tasks.html  tecnologias.html
infra/analysis/: Dockerfile
infra/cron/: Dockerfile  crontab  entrypoint.sh
infra/kafka/: topics.sh
infra/postgres/: init.sql
infra/streamlit/: Dockerfile
pipelines/: __init__.py
pipelines/batch/: __init__.py
pipelines/batch/gold/: __init__.py  continuum_cid.py  hospital_panel.py  leitos_municipio.py  ml_mortalidade_dataset.py  mortalidade_municipio_competencia.py  orchestrator.py
pipelines/batch/ingestion/: __init__.py  bronze_writer.py  config.py  orchestrator.py  watermark.py
pipelines/batch/ingestion/sources/: __init__.py  sih.py
pipelines/batch/silver/: __init__.py  cnes_lt.py  cnes_st.py  orchestrator.py  sih_rd.py  sim_do.py  utils.py
pipelines/stream/: __init__.py  triagem_consumer.py  triagem_producer.py
scripts/: baixar_samples.py  download_ibge_geo.py  download_idhm.py  download_poa_geo.py  download_poa_populacao.py  download_rs_populacao.py  eda_00_univariada_setup.py  eda_00b_distribuicoes.py  eda_01_schema.py  eda_02_temporal.py  eda_03_geo.py  eda_04_diag_demo.py  eda_05_janela_risco.py  gen_data_dict.py  gen_datasets_dic.py  gen_dicionario_dados_html.py  inventario_pysus.py  seed_bronze_from_samples.py
tests/: __init__.py
